Change the architecture of the option to obtain members for collaboration